# rag-lab

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  HERMES_BRAIN.md  IMPLEMENTATION_PLAN.md  PLAN_BUGFIXES.md  PLAN_IMPORTANCE_FILTER.md  README.md  documentation.md  pyproject.toml  ui-redesign-prompt.md  verify_brain.py
data/epubs/: risk_handbook.epub
data/markdowns/: cooking.md  distributed_systems.md  risk_management.md
rag_lab/: __init__.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  logging.py  metadata.py  retriever.py  vault_config.py  vector_store.py  verifier.py  watcher.py  web.py
rag_lab/parsers/: __init__.py  epub.py  markdown.py  pdf.py
tests/: test_chunker.py  test_config.py  test_indexer.py  test_integration.py  test_metadata.py  test_parsers.py  test_vault_config.py  test_vector_store.py  test_verifier.py
vault_bridge/: __init__.py  compressor.py  config.py  entity_gen.py  hippocampus.py  reader.py  session_writer.py  writer.py
vault_bridge/tests/: test_compressor.py  test_entity_gen.py  test_hippocampus.py  test_reader.py  test_session_writer.py  test_writer.py
