[project]
name = "rag-lab"
version = "0.1.0"
description = "Standalone RAG learning project"
requires-python = ">=3.11"
dependencies = [
    "pypdf>=5.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.5",
]

[project.scripts]
rag = "rag_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_lab"]
